<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- 通用字符串 -->
    <string name="app_name">算你狠</string>
    <string name="ok">确定</string>
    <string name="cancel">退出</string>

    <!-- HomeActivity中所使用的字符串 -->
    <string name="activity_home_button_endless_mode">无限模式</string>
    <string name="activity_home_button_normal_mode">普通模式</string>
    <string name="activity_home_button_quit">退出</string>
    <string name="activity_home_button_rank">无限排行榜</string>
    <string name="activity_home_button_htp">使用说明</string>
 

    <!-- GameActivity中使用的字符串 -->
    <string name="score_correct_hint">对:</string>
    <string name="score_pass_hint">过:</string>
    <string name="score_error_hint">错:</string>
    <string name="activity_game_operation_correct">√</string>
    <string name="activity_game_operation_error">×</string>
    <string name="activity_game_operation_plus">+</string>
    <string name="activity_game_operation_minus">-</string>
    <string name="activity_game_operation_multiply">×</string>
    <string name="activity_game_operation_division">÷</string>
    <string name="activity_game_operation_equal">=</string>

    <!-- ResultActivity中使用的字符串 -->
    <string name="activity_result_choice_button_again">再来一局</string>
    <string name="activity_result_choice_button_quit">退出</string>
    <string name="activity_result_choice_button_share">分享</string>


    <string name="activity_result_score_hint_correct">对</string>
    <string name="activity_result_score_hint_no">过</string>
    <string name="activity_result_score_hint_error">错</string>
    <string name="activity_result_score_hint_rank">排名</string>
    <string name="activity_result_score_hint_total">总成绩</string>
	<string name="activity_result_badScore">很遗憾你的数学可能是体育老师教的(嘲讽脸)</string>
	<string name="activity_result_goodScore">可以，小高斯</string>
    
    <!-- SettingActivity中使用的字符串 -->
    <string name="activity_setting_menu_numRange_name">范围设置</string>
    <string name="activity_setting_menu_speed_name">速度设置</string>
    <string name="activity_setting_menu_number_name">数量设置</string>
    <string name="activity_setting_menu_numRange_ten">10以内</string>
    <string name="activity_setting_menu_numRange_hundred">100以内</string>
    <string name="activity_setting_menu_speed_slow">慢速</string>
    <string name="activity_setting_menu_speed_middle">中速</string>
    <string name="activity_setting_menu_speed_fast">快速</string>
    <string name="activity_setting_menu_number_judge_hint">判断题数目(10&#8211;50):</string>
    <string name="activity_setting_menu_number_calculate_hint">计算题数目(10&#8211;50):</string>
    <string name="activity_setting_menu_number_judge_input_hint">输入判断题数目</string>
    <string name="activity_setting_menu_number_calculate_input_hint">输入计算题数目</string>
    <string name="activity_setting_title_hint">设置</string>
    <string name="activity_setting_dialog_title">错误</string>
    <string name="activity_setting_dialog_message">题目数量填写超出规定范围,是否使用默认值?</string>
	<string name="action_settings">设置</string>
	<!--  howToPlay中所使用的字符串 -->
	<string name="activity_howtoplay">使用说明</string>
	<string name="activity_howtoplay_content">普通模式：根据设置，进行随机出题，可记录答对，错过，答错的题目。\n\n
	    无限模式：顾名思义，题目数量无限，默认为10以内的加减乘除混合出题，一旦答错则结束游戏。\n\n
	    无限排行榜：记录无限模式中的游戏结束时间以及答对题目数。\n\n
	    设置：可设置操作数范围（为了优化使用体验，\'10以内\'选项为10以内操作数的加减乘除运算，除法运算规定为除数和商为10以内，\'100以内\'选项为100以内操作数的加减运算），游戏速度，判断题和计算题的数目。设置只对普通模式起效。
	    </string>
	

</resources>